--- a/zee/templates/z/contact.html
+++ b/zee/templates/z/contact.html
@@ -6,7 +6,7 @@
 	<div align = "center" style = "color:green">
 		<body style="background-color:black;">
 			<p><b>
-			If you report an error, send screenshot of URL of video.
+			If you report an error, send screenshot to my whatsapp number👇
 			</br></br>
 			<a href="https://api.whatsapp.com/send?phone=918428425154&source=http://127.0.0.1:8080&app_absent=0">contact me on Whatsapp</a>
 			</b></p>
