--- a/zee/templates/c/home.html
+++ b/zee/templates/c/home.html
@@ -25,7 +25,7 @@
 										    </b></p>
 			<h3> Features </h3>
 				<p style = "color:grey"><b> • No registration required</b></br></br>
-											• Added movies, shows, originals<b></p>
+											• Added movies, shows, originals, music<b></p>
 			<a href = "/about">About</a> | <a href = "/contact">Contact</a>
 		</div>
 	</body>	
